lib/translator/test/fixtures/ok/raw/calls.prg
PROGRAM call
BEGIN
    log("hello world")
END
