lib/translator/test/fixtures/error/raw/wrong-arg-amount.prg
PROGRAM wrong_arg_amount
BEGIN
    log("waka", "waka")
END
